// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentItemLink should call the connection emit function when clicked 1`] = `
<div>
  <a
    class="svelte-1xffnc5"
    href="CONTENT_ITEM_URL"
  >
    LABEL
  </a>
  
</div>
`;

exports[`ContentItemLink should display a the content item link with a href and label 1`] = `
<div>
  <a
    class="svelte-1xffnc5"
    href="CONTENT_ITEM_URL"
  >
    LABEL
  </a>
  
</div>
`;

exports[`ContentItemLink should display the content item id 1`] = `
<div>
  
  <span>
    abc
  </span>
</div>
`;

exports[`ContentItemLink should display the content item id if it was unable to get the content item 1`] = `
<div>
  <a
    class="svelte-1xffnc5"
    href="CONTENT_ITEM_URL"
  >
    abc
  </a>
  
</div>
`;

exports[`ContentItemLink should display without a href if it was unable to get the URL 1`] = `
<div>
  <a
    class="svelte-1xffnc5"
  >
    LABEL
  </a>
  
</div>
`;
